objects/ssot__ProviderVisitProductDiscussion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdditionalInformationText__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Provider Visit Product Discussion Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NoteText__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderVisitProductDetailingId__c</fullName>
        <label>Provider Visit Product Detailing</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561366978_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitProductDiscussion_Provi_rel</label>
        <referenceTo>ssot__ProviderVisitProductDetailing__dlm</referenceTo>
        <relationshipLabel>ProviderVisitProductDiscussion_Provi_rel</relationshipLabel>
        <relationshipName>rel_1745561366978_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>